--- a/app/src/main/res/layout/fragment_refrigerator.xml
+++ b/app/src/main/res/layout/fragment_refrigerator.xml
@@ -27,8 +27,8 @@
 
     <LinearLayout
         android:id="@+id/linear1"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_width="412dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="160dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
